--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["@babel/preset-env"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": "> 0.25%, not dead", 
+        "useBuiltIns": "usage",         
+        "corejs": 3                     
+      }
+    ]
+  ]
 }
