--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "stylelint": "stylelint src/css"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.8",
-    "@babel/preset-env": "^7.25.8",
+    "@babel/core": "^7.25.9",
+    "@babel/preset-env": "^7.25.9",
     "babel-loader": "^8.4.1",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-env": "^2.0.0-beta.2",
@@ -37,5 +37,8 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "libphonenumber-js": "^1.11.12"
   }
 }
